2006-01-28  Andreas Kupries  <akupries@shaw.ca>

	* uri.test: Fixed use of duplicate test names. Also fixed creation
	  and cleanup of temp. files by the testsuite.

2006-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri-rfc2396.test: More boilerplate simplified via use of test support.
	* uri.test:
	* urn.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri-rfc2396.test: Hooked into the new common test support code.
	* uri.test:
	* urn.test:

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* uri.man: Added information about url constituents to the
	  documentation of uri::split. For the schemes we know them
	  for. This fixes [SF Tcllib Bug 1335320] by Kristoffer Lawson
	  <setok@users.sourceforge.net>.

2005-10-21  Andreas Kupries <andreask@activestate.com>

	* urn.test: Fixed typo.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-07-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri.tcl: Fixed bug 1243171, reported by Jean-Luc Fontaine. The
	  list variable in a foreach had no $-prefix. D'oh.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-09-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* urn-scheme.tcl (urn::unquote): The latest unquote used features
	  specific to 8.3 (regexp -start), and the package claims
	  useability with 8.2. Added a check for the version of Tcl, and
	  for 8.2 we now provide a variant implementation of unquote for
	  8.2 which does not use 'regexp -start', but simulates it.

2004-08-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* urn-scheme.tcl: Fixed the unquote function which was broken.
	* urn.test:       Added some tests from RFC 2324 to check the
	                  quote and unquote procedures.
